--- a/src/front_end/kkkkk/web/checkout.html
+++ b/src/front_end/kkkkk/web/checkout.html
@@ -11,6 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <title>Cửa Hàng Bánh Kẹo/ Kiểm Tra</title>
 <!-- for-mobile-apps -->
 	<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="https://www.paypalobjects.com/api/checkout.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Nơi Cung Cấp Bánh Kẹo Ngon Nhất Hành Tinh" />
@@ -196,8 +197,56 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</div>
 									</section>
 								</form>
-								<button id="checkoutT" class="btn btn-primary">Mua hàng ngay bây giờ
+								<button id="checkoutT" class="btn btn-primary">Mua hàng trả tiền khi nhận
 			      				</button>
+					<div id="paypal-button-container"></div>
+					<script>
+						var cartTasty = JSON.parse(sessionStorage.CartTasty);
+						var amount = 0;
+						for (var i = 0; i < cartTasty.length; i++) {
+							amount += cartTasty[i].amount;
+						}
+						paypal.Button.render({
+
+							env: 'sandbox', // sandbox | production
+
+							// PayPal Client IDs - replace with your own
+							// Create a PayPal app: https://developer.paypal.com/developer/applications/create
+							client: {
+								sandbox:    'AZDxjDScFpQtjWTOUtWKbyN_bDt4OgqaF4eYXlewfBP4-8aqX3PiV8e1GWU6liB2CUXlkA59kJXE7M6R',
+								production: 'AQ6A7qgjRX3v4lE32qPKggYVAbGbkJXBuRBcfAsg-8NYxajCavvCELCfo4KOhQF2tUiYi3yIAsrL2X_6'
+							},
+
+							// Show the buyer a 'Pay Now' button in the checkout flow
+							commit: true,
+
+							// payment() is called when the button is clicked
+							payment: function(data, actions) {
+
+								// Make a call to the REST api to create the payment
+								return actions.payment.create({
+									payment: {
+										transactions: [
+											{
+												amount: { total: amount, currency: 'USD' }
+											}
+										]
+									}
+								});
+							},
+
+							// onAuthorize() is called when the buyer approves the payment
+							onAuthorize: function(data, actions) {
+
+								// Make a call to the REST api to execute the payment
+								return actions.payment.execute().then(function() {
+									window.alert('Payment Complete!');
+								});
+							}
+
+						}, '#paypal-button-container');
+
+					</script>
 					</div>
 			
 				<div class="clearfix"> </div>
